   * FIX : src/gdcmDocument.cxx Remove obvious code in the destructor 
   * FIX : src/gdcmPixelConvert : Set to NULL the deleted structures in the
     squeeze method

2004-11-15 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * FIX: src/gdcmUtil.cxx : to compile with MSVC6
   * src/gdcmDocument.cxx : fix memory leaks. Fix possible bugs : use an object
     after it have been deleted

2004-11-09 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
   * FIX: src/* fix the doxygen warnings.

2004-11-15 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
    1. Finish merging JMR patch for writting DICOM from scratch
    2. Fix -hopefully- bug with MONOCHROME and space vs null character
    3. Use const ref when possible
    4. Add a new function InitializeDefaultHeader, which create a template DICOM header (CT image for now)
    5. A few more comments
    6. CreateUniqueUID can now be called without parameter"

2004-11-15 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * ENH: Slightly bigger patch:
    1. Getting toward full integration of JMR patch for writting dicom from scratch
    2. Update Test to test part of this patch: CreateUniqueUID
    3. File was not close properly in gdcmDict
    4. Use of typedef is to be prefered when possible (gdcmDict.cxx)
    5. Use of const ref instead of copy (speed issue)
    6. Remove temporary (duplicate) string in TranslateToKey
    7. Mark extremely dangerous code as such (gdcmDocument.cxx and AddEntry fallback case)
    8. Do not repeat virtual in subclasses
    9. Implemented in gdcm::Util two new function: GetIPAddress, and CreateUniqueUID

2004-11-15 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Apply first patch toward better string comparison when dealing with broken 
    DICOM files. Essentially the string could be padded with a space instead 
    of a null character as defined by standard
  
2004-11-15 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>